cmake_minimum_required(VERSION 3.31)
project(Problems)

set(CMAKE_CXX_STANDARD 20)

add_executable(Problems main.cpp
        problem.h
        Problems/problem_1.cpp
        Problems/Problems.h
        Problems/problem_1.h
        resources.cpp
        resources.h
        Problems/problem_3.cpp
        Problems/problem_3.h
        Problems/problem_2.cpp
        Problems/problem_2.h
        Problems/problem_386.cpp
        Problems/problem_386.h
        Problems/problem_440.cpp
        Problems/problem_440.h
        Problems/problem_9.cpp
        Problems/problem_9.h
        Problems/problem_3442.cpp
        Problems/problem_3442.h
        Problems/problem_5.cpp
        Problems/problem_5.h
        Problems/problem_3423.cpp
        Problems/problem_3423.h
        Problems/problem_2616.cpp
        Problems/problem_2616.h
        Problems/problem_11.cpp
        Problems/problem_11.h
        Problems/problem_3396.cpp
        Problems/problem_3396.h
        Problems/problem_1432.cpp
        Problems/problem_1432.h
        Problems/problem_12.cpp
        Problems/problem_12.h
        Problems/problem_1545.cpp
        Problems/problem_1545.h
        Problems/problem_1572.cpp
        Problems/problem_1572.h
        Problems/problem_2016.cpp
        Problems/problem_2016.h
        Problems/problem_417.cpp
        Problems/problem_417.h
        Problems/problem_3101.cpp
        Problems/problem_3101.h
        Problems/problem_2966.cpp
        Problems/problem_2966.h
        Problems/problem_637.cpp
        Problems/problem_637.h
        Problems/problem_1356.cpp
        Problems/problem_1356.h
        Problems/problem_2294.cpp
        Problems/problem_2294.h
        Problems/problem_1556.cpp
        Problems/problem_1556.h
        Problems/problem_1562.cpp
        Problems/problem_1562.h
        Problems/problem_3443.cpp
        Problems/problem_3443.h
        Problems/problem_1855.cpp
        Problems/problem_1855.h
        Problems/problem_2679.cpp
        Problems/problem_2679.h
        Problems/problem_1893.cpp
        Problems/problem_1893.h
        Problems/problem_3085.cpp
        Problems/problem_3085.h
        Problems/problem_2138.cpp
        Problems/problem_2138.h
        Problems/problem_334.cpp
        Problems/problem_334.h
        Problems/problem_136.cpp
        Problems/problem_136.h
        Problems/problem_2081.cpp
        Problems/problem_2081.h
        Problems/problem_2200.cpp
        Problems/problem_2200.h
        Problems/problem_2685.cpp
        Problems/problem_2685.h
        Problems/problem_2040.cpp
        Problems/problem_2040.h
        Problems/problem_1725.cpp
        Problems/problem_1725.h
        Problems/problem_984.cpp
        Problems/problem_984.h
        Problems/problem_2311.cpp
        Problems/problem_2311.h
        Problems/problem_1417.cpp
        Problems/problem_1417.h
        Problems/problem_3371.cpp
        Problems/problem_3371.h
        Problems/problem_3120.cpp
        Problems/problem_3120.h
        Problems/problem_2099.cpp
        Problems/problem_2099.h
        Problems/problem_1358.cpp
        Problems/problem_1358.h
        Problems/problem_1498.cpp
        Problems/problem_1498.h
        Problems/problem_1839.cpp
        Problems/problem_1839.h
        Problems/problem_594.cpp
        Problems/problem_594.h
        Problems/problem_1743.cpp
        Problems/problem_1743.h
        Problems/problem_3330.cpp
        Problems/problem_3330.h
        Problems/problem_1920.cpp
        Problems/problem_1920.h
        Problems/problem_3461.cpp
        Problems/problem_3461.h
        Problems/problem_1968.cpp
        Problems/problem_1968.h
        Problems/problem_3304.cpp
        Problems/problem_3304.h
        Problems/problem_2856.cpp
        Problems/problem_2856.h
        Problems/problem_3307.cpp
        Problems/problem_3307.h
        Problems/problem_3128.cpp
        Problems/problem_3128.h
        Problems/problem_1394.cpp
        Problems/problem_1394.h
        Problems/problem_1108.cpp
        Problems/problem_1108.h
        Problems/problem_448.cpp
        Problems/problem_448.h
        Problems/problem_1865.cpp
        Problems/problem_1865.h
        Problems/problem_2212.cpp
        Problems/problem_2212.h
        Problems/problem_1353.cpp
        Problems/problem_1353.h
        Problems/problem_3011.cpp
        Problems/problem_3011.h
        Problems/problem_1751.cpp
        Problems/problem_1751.h
        Problems/problem_2335.cpp
        Problems/problem_2335.h
        Problems/problem_3439.cpp
        Problems/problem_3439.h
        Problems/problem_1128.cpp
        Problems/problem_1128.h
        Problems/problem_3440.cpp
        Problems/problem_3440.h
        Problems/problem_463.cpp
        Problems/problem_463.h
        Problems/problem_2402.cpp
        Problems/problem_2402.h
        Problems/problem_3522.cpp
        Problems/problem_3522.h
        Problems/problem_2208.cpp
        Problems/problem_2208.h
        Problems/problem_1296.cpp
        Problems/problem_1296.h
        Problems/problem_2410.cpp
        Problems/problem_2410.h
        Problems/problem_2369.cpp
        Problems/problem_2369.h
        Problems/problem_1290.cpp
        Problems/problem_1290.h
        Problems/problem_1007.cpp
        Problems/problem_1007.h
        Problems/problem_3136.cpp
        Problems/problem_3136.h
        Problems/problem_1419.cpp
        Problems/problem_1419.h
        Problems/problem_3201.cpp
        Problems/problem_3201.h
        Problems/problem_461.cpp
        Problems/problem_461.h
        Problems/problem_3202.cpp
        Problems/problem_3202.h
        Problems/problem_2109.cpp
        Problems/problem_2109.h
        Problems/problem_2163.cpp
        Problems/problem_2163.h
        Problems/problem_1480.cpp
        Problems/problem_1480.h
        Problems/problem_1233.cpp
        Problems/problem_1233.h
        Problems/problem_525.cpp
        Problems/problem_525.h
        Problems/problem_825.cpp
        Problems/problem_825.h
        Problems/problem_3516.cpp
        Problems/problem_3516.h
        Problems/problem_1732.cpp
        Problems/problem_1732.h
        Problems/problem_1957.cpp
        Problems/problem_1957.h
        Problems/problem_56.cpp
        Problems/problem_56.h
        Problems/problem_1695.cpp
        Problems/problem_1695.h
        Problems/problem_258.cpp
        Problems/problem_258.h
        Problems/problem_1717.cpp
        Problems/problem_1717.h
        Problems/problem_747.cpp
        Problems/problem_747.h
        Problems/problem_1688.cpp
        Problems/problem_1688.h
        Problems/problem_500.cpp
        Problems/problem_500.h
        Problems/problem_3487.cpp
        Problems/problem_3487.h
        Problems/problem_2274.cpp
        Problems/problem_2274.h
        Problems/problem_1577.cpp
        Problems/problem_1577.h
        Problems/problem_1089.cpp
        Problems/problem_1089.h
        Problems/problem_2210.cpp
        Problems/problem_2210.h
        Problems/problem_3138.cpp
        Problems/problem_3138.h
        Problems/problem_2044.cpp
        Problems/problem_2044.h
        Problems/problem_3452.cpp
        Problems/problem_3452.h
        Problems/problem_2411.cpp
        Problems/problem_2411.h
        Problems/problem_2894.cpp
        Problems/problem_2894.h
        Problems/problem_2419.cpp
        Problems/problem_2419.h
        Problems/problem_941.cpp
        Problems/problem_941.h
)
